# reaktoro

./: CONSTANTS_ANALYSIS.md  DENSITY_TOLERANCE_ANALYSIS.md  DEW_ACTIVITY_MODEL_IMPLEMENTATION.md  DEW_INTEGRATION_STRATEGY.md  DEW_TESTING.md  ERROR_DISTRIBUTION_ANALYSIS.md  EXCEL_EXTRACTION_VERIFICATION.md  INTEGRATION_ANALYSIS.md  INTEGRATION_METHODS_REPORT.md  INTEGRATION_METHODS_TEST_REPORT.md  METHOD_COMPARISON_ANALYSIS.md  NUMERICAL_METHODS_COMPARISON.md  OMEGA_PRECISION_SUMMARY.md  OMEGA_PRECISION_VERDICT.py  PER_SPECIES_ERROR_SUMMARY.md  analyze_error_distribution.py  analyze_reaction_detailed.py  analyze_species_g0_errors.py  analyze_species_g0_ranges.py  compare_hkf_parameters.py  compare_methods_detailed.py  comprehensive_species_analysis.py  environment.devenv.yml  identify_error_points.py  largest_errors_analysis.py  omega_precision_answer.py  omega_speciation_analysis.py  reactionTesttruth.csv  reaction_column_diffs.csv  reaction_errors_all.csv  reaction_test_results.csv  run_method_comparison.py  test_full_output.txt  test_integration_methods.py  test_methods_simple.cpp  test_water_gibbs.py  tmp_analyze_reaction_diffs.py  verify_hkf_calculations.py
DEW_Experimental_Benchmark/: quartz_DEW_testset.csv  quartz_solubility_analysis.py
Reaktoro/: CMakeLists.txt  Extensions.py.cxx
Reaktoro/Extensions/: DEW.hpp  DEW.py.cxx
Reaktoro/Extensions/DEW/: BUILD_CONFIGURATION.md  CMakeLists.txt  COMPILER_COMPATIBILITY.md  DEWDatabase.cpp  DEWDatabase.hpp  DEWDatabase.py.cxx  G_INTEGRAL_FIX.md  INTEGRATION_COMPLETE.md  WaterBornOmegaDEW.cpp  WaterBornOmegaDEW.hpp  WaterDEW.test.cxx  WaterDielectricFernandez1997.cpp  WaterDielectricFernandez1997.hpp  WaterDielectricFranck1990.cpp  WaterDielectricFranck1990.hpp  WaterDielectricJohnsonNorton.cpp  WaterDielectricJohnsonNorton.hpp  WaterDielectricModel.cpp  WaterDielectricModel.hpp  WaterDielectricPowerFunction.cpp  WaterDielectricPowerFunction.hpp  WaterElectroModel.cpp  WaterElectroModel.hpp  WaterElectroProps.hpp  WaterEosZhangDuan2005.cpp  WaterEosZhangDuan2005.hpp  WaterEosZhangDuan2009.cpp  WaterEosZhangDuan2009.hpp  WaterGibbsModel.cpp  WaterGibbsModel.hpp  WaterHelmholtzPropsWagnerPruss.hpp  WaterModelOptions.cpp  WaterModelOptions.hpp  WaterModels.py.cxx  WaterPsatPolynomialsDEW.cpp  WaterPsatPolynomialsDEW.hpp  WaterSolventFunctionDEW.cpp  WaterSolventFunctionDEW.hpp  WaterState.cpp  WaterState.hpp  (+6 more)
Reaktoro/Extensions/DEW/tests/: CMakeLists.txt  EXCEL_FIX_INSTRUCTIONS.md  WaterTestAdapters.cpp  WaterTestAdapters.hpp  WaterTestCommon.hpp  analysis_results.txt  failing_points.csv  headers.txt  reactionTesttruth.csv  reaction_errors_all.csv  test_dew_reaction.cpp  test_dew_water.cpp  test_integration_comparison.cpp  test_yaml_fix.cpp  truth_G_DH1978.csv  truth_G_integral.csv  truth_G_psat.csv  truth_Omega_AllSpecies.csv  truth_Q_densEq1_epsEq4.csv  truth_density_ZD2005.csv  truth_density_ZD2009.csv  truth_density_psat.csv  truth_depsdrho_Fernandez1997.csv  truth_depsdrho_Franck1990.csv  truth_depsdrho_JN1991.csv  truth_depsdrho_Power.csv  truth_dgdP_eq2.csv  truth_dgdP_psat.csv  truth_drhodP_ZD2005.csv  truth_drhodP_ZD2009.csv  truth_epsilon_Fernandez1997.csv  truth_epsilon_Franck1990.csv  truth_epsilon_JN1991.csv  truth_epsilon_Power.csv  truth_epsilon_psat.csv  truth_g.csv  verify_species_params.cpp  verify_yaml_vs_excel.py
Reaktoro/Models/: StandardThermoModels.py.cxx
Reaktoro/Models/StandardThermoModels/: ReactionStandardThermoModelPressureCorrection.cpp  ReactionStandardThermoModelPressureCorrection.hpp  StandardThermoModelDEW.cpp  StandardThermoModelDEW.hpp  StandardThermoModelDEW.py.cxx
Reaktoro/Serialization/Models/: StandardThermoModels.cpp  StandardThermoModels.hpp
embedded/databases/DEW/: DEW_2019.xlsm  Latest_DEW2024.xlsm  analyze_omega_magnitude.py  build_dew_reaktoro_db.py  check_co2_params.py  check_columns.py  check_excel.py  check_excel_raw_values.py  check_gas_table.py  check_sheet_names.py  check_yaml_precision.py  check_yaml_values.py  compare_dew_supcrt_magnitudes.py  compare_dew_supcrt_units.py  compare_excel_yaml.py  dew2019-aqueous.yaml  dew2019-gas.yaml  dew2024-aqueous.yaml  dew2024-gas.yaml  document_supcrt_units.py  investigate_constants_density_epsilon.py  investigate_parameter_differences.py  summary_dew_supcrt.py  test_omega_scaling.py  verify_electrostatic_radius.py  verify_excel_extraction_precision.py  verify_excel_yaml_match.py  verify_final_fix.py  verify_fix_calculation.py  verify_gas_yaml.py  verify_yaml_fix.py
tests/: test_dew_python.py  test_none_options.py  test_standardthermo_dew.py  test_water_model_combinations.py
